# arrow-flight-playground

./: .gitignore  README.md
basic-doput/: CMakeLists.txt  README.md  client.cc  modd.conf  server.cc
basic_doput/: README.md  client.cc  server.cc
distributed_example/: client.py  coordinator.py  data.py  docker-compose.yml
distributed_example/cpp/: Dockerfile  docker-compose.yml  list_flights.py
distributed_example/cpp/flight_datasets/: starwars.parquet
distributed_example/cpp/src/: CMakeLists.txt  common.h  coordinator.cc  server.cc
distributed_example/data_server/: Dockerfile
distributed_example/data_server/src/: server.cc
distributed_example/python/: Dockerfile
distributed_example/server/src/: server.cc
distributed_with_opentelemetry/: Dockerfile  README.md  docker-compose.yml  list_and_get_all_flights.py
distributed_with_opentelemetry/src/: CMakeLists.txt  common.h  data_server.cc  metadata_server.cc  server.cc
headers_call_options/: CMakeLists.txt  client.cc  client.py  server.py
headers_middleware/: CMakeLists.txt  client.cc  modd.conf  server.cc
otel_example_distributed/: README.md  list_and_get_all_flights.py  requirements.txt
otel_example_distributed/src/: coordinator.cc  server.cc
server_options/: CMakeLists.txt  README.md  client.py  server.cc
test_flight_polling_latency/: .gitignore  README.md  docker-compose.yml  load_server.py  prometheus.yml  run_test.sh
test_flight_polling_latency/server/: Dockerfile  build_comparison_containers.sh
test_flight_polling_latency/server/src/: CMakeLists.txt  CMakePresets.json  server.cc
test_flight_stress/: .gitignore  README.md  docker-compose.yml  environment-8.yml  environment-9.yml  load_server.py  run_test.sh  test_get_flight_info.py  test_log_levels.py  upload_flights.py
test_flight_stress/client/: environment-8.yml  test_do_put.py  test_get_flight_info.py
test_flight_stress/client/src/: CMakeLists.txt  CMakePresets.json  client.cc  test.sh
test_flight_stress/client_python/: Dockerfile  client.py  requirements.txt  simulate_traffic.py  tracing_middleware.py
test_flight_stress/data/: flight-server-arrow-8-grpc-1-35.parquet  flight-server-arrow-9-grpc-1-35.parquet  flight-server-arrow-9-grpc-1-46.parquet
test_flight_stress/server/:  build_comparison_containers.sh  Dockerfile  README.md  analysis.ipynb  docker-compose.yml
test_flight_stress/server/src/: CMakeLists.txt  CMakePresets.json  server  server.cc
test_flight_stress/src/: CMakeLists.txt  server.cc
